frontend/src/views/admin/matching/styles.css
.noselect {
    user-select: none;
}

.page-body.matching {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    flex-basis: 0;
    align-items: stretch;
    overflow: hidden;
}
.matching-body {
    display: flex;
    flex-grow: 1;
    overflow: hidden;
    height: 100%;
}

.matching-list-container {
    min-width: 300px;
    max-width: 400px;
    width: 100%;
    height: 100%;
    overflow-y: auto;
    flex: 0 0 200px;
    margin-right: 1em;
    display: flex;
    flex-direction: column;
}

.matching-applicant-container {
    flex: 1 1 0;
    min-width: 0;
    height: 100%;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
}

.matching-applicant-area {
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.matching-footer {
    /* The footer inherits from .page-actions for the correct color. However, we don't want
    some of .page-actions's other properties */
    height: unset;
    overflow: unset;

    display: flex;
    column-gap: 5px;
    padding: 5px;
}

.footer-button-separator {
    flex-grow: 1;
}

.change-icon {
    color: #dc4633;
    margin-right: 3px;
}

.position-sidebar {
    min-width: 300px;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    flex-grow: 0;
    flex-basis: 0;
}

.search-container {
    display: flex;
    align-items: center;
    margin-bottom: 3px;
}

.position-search {
    padding: 5px;
}

.filter-button-container {
    padding-right: 10px;
    margin: 5px;
}

.filter-button {
    cursor: pointer;
}

.filter-button.active {
    color: #ab1368;
}

.position-list {
    overflow-y: auto;
    padding-left: 10px;
    padding-right: 10px;
}

.position-list-inner {
    display: flex;
    flex-direction: column;
    row-gap: 5px;
}

/*
 * We use button elements for position-row items so that
 * keyboard navigation works. However, we want to completely customize
 * the style of these elements, so we remove all the default button styling.
 */
:where(button.position-row) {
    all: unset;
}

.position-row:focus {
    outline: auto;
}
.position-row:hover {
    background-color: #ddd;
}

.position-row {
    cursor: pointer;
    position: relative;
    display: flex;
    box-shadow: 3px 2px 5px -3px #7d7d7d;
    transition: height 0.4s ease-out, flex-grow 0.4s ease-out;
    border-color: #d5d5d5;
    border-left-width: 5px;
    border-left-style: solid;
    overflow: hidden;
}

.position-row.selected {
    border: 2px;
    border-left: 5px;
    border-style: dashed dashed dashed solid;
}

.position-row.n\/a {
    border-color: #ab1368;
}

.position-row.empty {
    border-color: #dc4633;
}

.position-row.under {
    border-color: #f1c500;
}

.position-row.matched {
    border-color: #00a189;
}

.position-row.over {
    border-color: #6fc7ea;
}

.position-row-background {
    display: flex;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: white;
}

.position-row-info {
    padding: 5px 10px;
    flex-grow: 1;
    display: flex;
    position: relative;
    flex-wrap: wrap;
}

.position-row-detail {
    /* Force this div to flex-wrap to the next row */
    flex-basis: 100%;
    font-weight: 250;
    font-size: smaller;
    margin-top: 2px;
}

.position-row-background > .progress {
    height: 100%;
    width: 100%;
    border-radius: 0;
    position: relative;
    transition: width 0.75s ease;
}

.progress.n\/a {
    background-color: rgba(171, 19, 104, 0.25);
}

.progress.under {
    background-color: rgba(241, 197, 0, 0.25);
}

.progress.matched {
    background-color: rgba(0, 161, 137, 0.25);
}

.progress.over {
    background-color: rgba(111, 199, 234, 0.25);
}

#table-view {
    flex-grow: 1;
    overflow-y: auto;
}

#grid-view {
    flex-grow: 1;
    overflow-y: auto;
}

.position-row-info .position-title {
    flex-grow: 1;
    font-weight: bold;
}

.position-row-info .position-hours-filled {
    color: var(--gray);
}

.container-filler {
    flex-grow: 1;
}

.grid-view-list {
    display: flex;
    flex-wrap: wrap;
    row-gap: 6px;
    column-gap: 8px;
}

:where(button.applicant-pill) {
    all: unset;
}
.applicant-pill:focus {
    outline: auto;
}
.applicant-pill:hover {
    background-color: #fafafa;
}

.applicant-pill {
    padding: 0;
    display: flex;
    width: 170px;
    border-radius: 5px;
    overflow: hidden;
    background-color: #fff;
    cursor: pointer;
    font-size: smaller;
    box-shadow: 2px 2px 6px #ccc;
}
.applicant-pill-right {
    margin-left: auto;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    align-self: center;
}
.applicant-pill-middle {
    padding-left: 4px;
    padding-bottom: 2px;
    flex-grow: 1;
    flex-basis: 0;
    overflow: hidden;
}

.applicant-status-sidebar {
    display: flex;
    width: 30px;
    align-items: center;
    flex-direction: column;
    text-align: center;
    color: #fff;
    background-color: #cfcfcf;
}

.applicant-status-sidebar.empty {
    background-color: #dc4633;
}

.applicant-status-sidebar.under {
    background-color: #f1c500;
}

.applicant-status-sidebar.matched {
    background-color: #00a189;
}

.applicant-status-sidebar.over {
    background-color: #6fc7ea;
}

.applicant-grid-main {
    flex-direction: column;
    margin-left: 5px;
    flex-grow: 1;
}

.grid-row {
    display: flex;
    column-gap: 5px;
}

.grid-detail-small {
    min-width: 20px;
    padding-left: 2px;
    padding-right: 2px;
    border-radius: 2px;
    text-align: center;
    color: #868686;
    background: #eeeeee;
}

.applicant-name {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.matching-course-header {
    padding: 5px 10px 0px 10px;
}
.matching-course-header h2 {
    margin-bottom: 5px;
}

.matching-course-body {
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    flex-grow: 1;
    row-gap: 15px;
    padding: 0px 10px 0px 10px;
}
.matching-course-body .table {
    margin-bottom: 0;
}

.applicant-status-divider {
    width: 75%;
    height: 1px;
    background-color: #fff;
}

.applicant-status-value {
    flex-grow: 1;
}

.no-highlight {
    outline: none !important;
    box-shadow: none !important;
}

.icon-container {
    flex-shrink: 1;
    display: inline-flex;
    align-items: center;
    font-size: large;
    justify-content: flex-end;
    margin-left: auto;
    margin-right: 2px;
    column-gap: 2px;
}

.star-icon {
    color: #eee;
    transition: color 0.2s ease-out;
}

.star-icon.filled {
    color: gold;
}

.star-icon:hover {
    color: gold;
}

.sort-dropdown-container {
    display: flex;
    gap: 1px;
    flex-wrap: wrap;
    margin-top: 10.5px;
}

.sort-dropdown-container > * > .dropdown-menu.show {
    max-height: 250px;
    overflow-y: auto;
    font-size: smaller;
}

.applicant-pill + .dropdown-menu {
    font-size: smaller;
}

.filter-form {
    display: flex;
    flex-wrap: wrap;
    column-gap: 30px;
}

.filter-section-title {
    font-weight: 600;
}

.locked-applicant {
    color: #595959;
}

.applicant-icon.active {
    color: #595959;
}

.applicant-icon.inactive {
    color: #eee;
}

.sort-icon {
    cursor: pointer;
}

.sort-icon:nth-child(3n) {
    margin-right: 5px;
}

.sort-dropdown > .dropdown-toggle::after {
    content: none;
}

.applicant-hours {
    flex-shrink: 1;
    display: inline-flex;
    align-items: center;
    justify-content: flex-end;
    margin-left: auto;
    margin-right: 2px;

    column-gap: 2px;
}

.grid-view-section > h4 {
    display: flex;
    align-items: center;
    column-gap: 10px;
}

.header-lock {
    font-size: medium;
    color: #595959;
    cursor: pointer;
}

.applicant-count {
    margin: 5px 0;
    font-size: smaller;
    color: #595959;
    margin-top: auto;
}

